<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="add_post">Add post</string>
    <string name="enter_text">Enter the text</string>
    <string name="play_video">Play video</string>
    <string name="empty_content_error">Content is empty</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="google_play_unavailable">Google API Unavailable</string>
    <string name="error_notification_title">You are using an old version of the application</string>
    <string name="error_notification_text">Please update the application for correct operation</string>
    <string name="error">Something bad happened</string>
    <string name="retry">Retry</string>
    <string name="empty_posts">Empry posts</string>
    <string name="post_image">Post image</string>
    <string name="new_post" >New post</string>

    <string name="clear">Clear</string>
    <string name="photo_pick_error">Photo pick error</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="logout">Logout</string>
    <string name="sign_in_error">User name not found or incorrect password/login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="empty_fields">Fields should not be empty</string>

</resources>